Splitting blocks/strips menus. Fixed a display bug in the strips views (strips in wrong order.) Adding new Strips operations (split, merge, about.)

--- a/Obi/Obi/Obi.csproj
+++ b/Obi/Obi/Obi.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Commands\Strips\ApplyPhraseDetection.cs" />
     <Compile Include="Commands\Strips\CopyPhrase.cs" />
     <Compile Include="Commands\Strips\EditOrRemoveAnnotation.cs" />
+    <Compile Include="Commands\Strips\ImportPhrases.cs" />
     <Compile Include="Commands\Strips\MergePhrases.cs" />
     <Compile Include="Commands\Strips\DeletePhrase.cs" />
     <Compile Include="Commands\Strips\MovePhrase.cs" />
