--- a/docs/Makefile
+++ b/docs/Makefile
@@ -7,7 +7,8 @@ INDENT =	xmllint --format
 STYLESHEET =	template.xslt
 HTML_FILES =	blocks.html events.html index.html manual.html plan.html\
 		playback.html selection.html strip_manager_shortcuts.html \
-		tasklist.html toolkit_audio.html operations.html features.html
+		tasklist.html toolkit_audio.html operations.html features.html \
+		recording.html keyboarding.html
 TODO_HTML =	todo.html
 
 all:	$(HTML_FILES) todo
