--- a/trunk/Obi/Obi/Obi.csproj
+++ b/trunk/Obi/Obi/Obi.csproj
@@ -237,6 +237,12 @@
     <Compile Include="ProjectView\AudioBlock.Designer.cs">
       <DependentUpon>AudioBlock.cs</DependentUpon>
     </Compile>
+    <Compile Include="ProjectView\ContainerBlock.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ProjectView\ContainerBlock.Designer.cs">
+      <DependentUpon>ContainerBlock.cs</DependentUpon>
+    </Compile>
     <Compile Include="ProjectView\EditableLabel.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -406,6 +412,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ProjectView\AudioBlock.resx">
       <DependentUpon>AudioBlock.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProjectView\ContainerBlock.resx">
+      <DependentUpon>ContainerBlock.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="ProjectView\EditableLabel.resx">
