--- a/Obi/Obi/Obi.csproj
+++ b/Obi/Obi/Obi.csproj
@@ -256,6 +256,12 @@
     <Compile Include="ProjectView\ContainerBlock.Designer.cs">
       <DependentUpon>ContainerBlock.cs</DependentUpon>
     </Compile>
+    <Compile Include="ProjectView\StripCursor.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="ProjectView\StripCursor.Designer.cs">
+      <DependentUpon>StripCursor.cs</DependentUpon>
+    </Compile>
     <Compile Include="ProjectView\EditableLabel.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -460,6 +466,10 @@
     <EmbeddedResource Include="ProjectView\Strip.resx">
       <SubType>Designer</SubType>
       <DependentUpon>Strip.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProjectView\StripCursor.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>StripCursor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ProjectView\StripsView.resx">
       <SubType>Designer</SubType>
